# Cantrip

./: AGENTS.md  CLAUDE.md  CLEANUP_SUMMARY.md  CURSIVE_LLM_ONBOARDING.md  Cantrip-Language-Spec-1.0.0.md  Cantrip-Language-Spec-v0.7.0.md  ClauseDraft.md  Cleanup.md  Cursive-Language-Specification-Draft3.md  CursiveLanguageSpec4.md  Draft3Outline.md  FFISystemProposal.md  FollowupPrompt.md  GEMINI.md  GPTClause6.md  GeminiClause6.md  Index.md  LLM-Quick-Reference.md  LLMOnboarding.md  LLM_QUICK_REFERENCE.md  LOOP_SPECIFICATION_COMPLETE.md  OldSpecWriting.md  Proposal.md  README.md  Review.md  SPECAGENTS.md  SPECIFICATION_ANALYSIS_REPORT.md  SPECIFICATION_ORGANIZATION_PROPOSAL.md  SPECIFICATION_REVIEW_ISSUES.md  SpecCleanup1.md  SpecReview.md  SpecReviewClaude.md  SpecReviewGPT.md  SpecReviewGemini.md  SpecWriting.md  SpecWritingPrompt.md  SpecWritingPrompt2.md  SpecificationTemplate.md  SpecificationWritingStyle.md  System2.md  (+10 more)
.ai/: DraftOutlinePrompt.md  PromptEngineer.md  SpecReviewPrompt.md  SpecWriting.md  SpecWritingPrompt.md  SpecificationWritingStyle.md  System2.md  feature-slice-eval-template.md  prompts.md  reviewprompt.md
.archive/: 01_FrontMatter.md  01_Introduction-and-Conformance.md  02_Lexical-Structure-and-Translation.md  02_TypesBackup.md  03-1_Subtyping-Equivalence.md  03_Expressions.md  04_Contracts.md  CLS-OLD.md  COMPLETE_OUTLINE.md  COMPLETE_SPECIFICATION_OUTLINE.md  Comprehensive-Spec-Review-2025-11-08.md  Comprehensive-Specification-Review-2025-11-08.md  Concurrency.md  Concurrency2.md  Cursive-Draft01.md  Cursive-Language-Specification-old.md  Design-Decisions-Required.md  Detailed-Clause-Findings.md  Draft2_CursiveLanguageSpecfication.md  GEMINI.md  Issue-Validation-Report-2025-11-08.md  OUTLINE_EVALUATION.md  Old_Functions.md  Old_Holes-and-Inference.md  Old_Lexical-Permissions.md  Old_Metaprogramming.md  Old_Modals.md  SystemPrompt.md  Transition-Type-Design-Analysis.md  UNIFIED_OUTLINE.md  appendix_errors.md  appendix_grammar.md  backupAGENTS.md  chapter5.md  outline.md
.claude/: settings.local.json
.design/: DESIGN_DECISIONS_2025_11.md  GRANTS_SYSTEM_AUTHORITATIVE.md
.obsidian/: community-plugins.json  workspace.json
Archive/: 01f_String_Agent4.md  01f_String_Operations.md  01f_String_sections_5.6.4-5.6.5.md  Cantrip-Error-Codes.md  Cantrip-LLM-Guide.md  Cantrip-Language-Spec-1.0.0-NORMATIVE.md  Cantrip-Language-Spec-1.0.0-PUBLISHABLE.md  Cantrip-Language-Spec-1.0.0.md  Cantrip-Language-Spec-1.0.1-CANONICAL.md  Cantrip-Language-Spec-1_0_0-Clean.md  Cantrip-Language-Spec-v0.7.1.md  Cantrip-Standard-Library-Spec.md  Cantrip-Tooling-Guide.md  Cantrip_Contracts_and_Verification_v0.7.1.md  Cantrip_Effect_System_v0.7.1.md  Cantrip_LLM_Quick_Reference_v0.7.1.md  Cantrip_Language_Spec_Index_and_Errata_v0.7.1.md  Cantrip_Modals_v0.7.1.md  DOCUMENTATION-RESTRUCTURE-SUMMARY.md  cantrip_llm_analysis.md
Conformance/: CONFORMANCE-1.0.md  Compliance-Matrix.csv  Test-Suite.md
Cursive-Language-Specification/: Appendix-B-Diagnostic-Code-Taxonomy.md  Cursive-Language-Specification-Complete.md  Cursive-Language-Specification.md  CursiveLanguageSpec4.md  CursiveLanguageSpecification-Validation-Report.md  CursiveLanguageSpecification.md  CursiveSpecification.md  Draft3_CursiveLanguageSpecification.md  STYLE-GUIDE.md  (+4 more)
cursive-bootstrap/: CMakeLists.txt  test_input.cur  test_simple.c
cursive-bootstrap/src/: main.c
cursive-bootstrap/src/codegen/: codegen.c  codegen.h  lower.c  target.c
cursive-bootstrap/src/common/: arena.c  arena.h  common.h  error.c  error.h  map.c  map.h  string_pool.c  string_pool.h  vec.c  vec.h
cursive-bootstrap/src/lexer/: lexer.c  lexer.h  token.c  token.h  unicode.c  unicode.h
cursive-bootstrap/src/parser/: ast.c  ast.h  parser.c  parser.h  pretty.c
cursive-bootstrap/src/runtime/: cursive_rt.c  cursive_rt.h
cursive-bootstrap/src/sema/: moves.c  perms.c  resolve.c  scope.c  scope.h  sema.c  sema.h  typecheck.c  types.c  types.h
cursive-bootstrap/tests/lexer/: test_lexer.c
cursive-bootstrap/tests/parser/: test_parser.c
cursive-bootstrap/tests/sema/: test_moves.c  test_resolve.c
(+448 files in other folders)
